k8s/immich-auto-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-auto-stack
  labels:
    app: immich-auto-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-auto-stack
  template:
    metadata:
      labels:
        app: immich-auto-stack
    spec:
      containers:
        - name: immich-auto-stack
          build: https://github.com/Majorfi/immich-auto-stack.git#d039ac39346c2fc758799636e3ca5ffff878d18e
