k8s/immich-import-control.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-import-control
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-import-control
  template:
    metadata:
      labels:
        app: immich-import-control
    spec:
      containers:
        - name: immich-import-control
          image: docker.io/eugeniumegherea/immich-import-control:latest
