k8s/immich-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-app-server-loadbalancer
  namespace: immich
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.254.11
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: immich-app
    app.kubernetes.io/name: server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 2283
    - name: metrics-api
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: metrics-ms
      port: 8082
      protocol: TCP
      targetPort: 8082
