k8s/immich-power-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-power-tools
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-power-tools
  template:
    metadata:
      labels:
        app: immich-power-tools
    spec:
      containers:
        - name: immich-power-tools
          image: ghcr.io/immich-power-tools/immich-power-tools:v0.25.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: immich-power-tools
  namespace: immich
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.254.13
  externalTrafficPolicy: Local
  ports:
    - port: 8001
      targetPort: 3000
  selector:
    app: immich-power-tools
