k8s/immich-kiosk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-kiosk
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-kiosk
  template:
    metadata:
      labels:
        app: immich-kiosk
    spec:
      containers:
        - name: immich-kiosk
          image: ghcr.io/damongolding/immich-kiosk:0.44.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: kiosk-config
              mountPath: /config/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: kiosk-custom-css
              mountPath: /custom.css
              subPath: custom.css
              readOnly: true
      volumes:
        - name: kiosk-config
          configMap:
            name: immich-kiosk-config
        - name: kiosk-custom-css
          configMap:
            name: immich-kiosk-custom-css

---
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk-svc
  namespace: immich
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.254.18
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: immich-kiosk

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-kiosk-ingress
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: immich-kiosk.k8s.jorblad.se
    http:
      paths:
      - backend:
          service:
            name: immich-kiosk-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - immich-kiosk.k8s.jorblad.se
    secretName: immich-kiosk-k8s-jorblad-se-tls
